40.1.1 (19-12-2022)
- Refactor: Rename normalizedEctsGrade attribute of external enrolment
- Refactor: Rename creationDateDateTime attribute of external enrolment (step 1)
- Bug fix: Allow set homologation date and studies start date with null
- Bug fix: Disconnect file from PhysicalAddressValidation on delete
- Bug fix: Correcting 404 and 403 redirect to login page to contain callback url

40.1.0 (06-12-2022)
- Refactor: Create domain entity RegistrationStateType

40.0.0 (23-11-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum
- Refactor: Remove RegistrationStateType

39.2.0 (19-11-2022)
- New feature: Entity employee
- Improvement: Add number to teacher
- Improvement: Add hours to shift professorship
- Bug fix: On degree info creation, fill prevailingScientificArea from previous version

39.1.0 (26-10-2022)
- Refactor: Remove branch group subclasses

39.0.1 (20-10-2022)
- Refactor: Remove AnyCurricularCourse rule legacy deprecated slots 

39.0.0 (19-10-2022)
- Refactor: Remove unused struts actions and related services
- Refactor: Remove uneessary intermediate class SpaceOccupation

38.0.0 (17-10-2022)
- Improvement: Add enrolmentInstructions slot to degree curricular plan
- Refactor: Remove deprecated degree curricular plan members group slot 
- Refactor: Cleanup party contacts validations
- Refactor: Remove legacy services and filters
- Refactor: Remove legacy dtos

37.0.0 (13-10-2022)
- Refactor: Remove legacy Struts functionalities

36.1.0 (10-10-2022)
- Refactor: Remove persistent relation between EvaluationSeason and OccupationPeriodReference
- Refactor: Remove deprecated OccupationPeriodType values and management UI

36.0.0 (06-10-2022)
- Refactor: Remove persistent relation between CourseLoad and LessonInstance
- Refactor: Remove deprecated enum CompetenceCourseLevel

35.0.1 (03-10-2022)
- Bug Fix: On statute types find, end date should be inclusive

35.0.0 (03-10-2022)