@@ -1,3 +1,5 @@
+- Refactor: Replace usage of RegistrationStateTypeEnum by RegistrationStateType
+
 40.1.1 (19-12-2022)
 - Refactor: Rename normalizedEctsGrade attribute of external enrolment
 - Refactor: Rename creationDateDateTime attribute of external enrolment (step 1)
